2022-05-05  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-gen.pks (struct_mapper): Add an explicative message
	for union alternative constraint exceptions.
	(struct_constructor): Likewise.
	* testsuite/poke.pkl/union-constraint-1.pk: New test.
	* testsuite/poke.pkl/union-constraint-2.pk: Likewise.
	* testsuite/poke.pkl/union-constraint-3.pk: Likewise.
	* testsuite/poke.pkl/union-constraint-4.pk: Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.

2022-04-09  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/pvm.h (pvm_assert): Add more parameters.
	(PVM_ASSERT): New macro.
	* libpoke/pvm.c (pvm_assert): Replace `assert` with an implementation.
	(assert.h): Remove #include.
	* libpoke/pvm.jitter (PVM_PRINTI): s/pvm_assert/PVM_ASSERT/.
	(PVM_FORMATI): Likewise.
	(PVM_FORMATU): Likewise.
	(exit): Likewise.
	(call): Likewise.
	(asettb): Likewise.
	(strace): Likewise.

2022-04-08  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-repl.c: Include ctype.h.

2022-04-08  Jose E. Marchesi  <jose.marchesi@oracle.com>

	* libpoke/pkl-gen.c (pkl_gen_ps_func): Fix E_no_return location in
	lambdas.

2022-04-08  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-ast.h: Prototype for pkl_ast_format_loc.
	* libpoke/pkl-ast.c (pkl_ast_format_loc): New function.
	* libpoke/pkl-gen.c (pkl_gen_ps_func): Add function name to
	E_no_return exception whenever possible.
	* testsuite/poke.pkl/fun-no-return-1.pk: New test.
	* testsuite/poke.pkl/fun-no-return-2.pk: Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.

2022-04-08  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-tab.y: Make struct and array constructors primary
	syntax entities.
	* testsuite/poke.pkl/scons-70.pk: New test.
	* testsuite/Makefile.am (EXTRA_DIST): Add new test.

2022-03-31  Jose E. Marchesi  <jemarch@gnu.org>

	* configure.ac: Update version to 2.3.
	* doc/gendocs_template: Likewise.
	* NEWS: Entries for 2.3.

2022-03-31  Jose E. Marchesi  <jemarch@gnu.org>
