@@ -1,3 +1,8 @@
+2022-06-05  apache2  <apache2@ageinghacker.net>
+
+	* libpoke/ios-dev-file.c (ios_dev_file_pread): Avoid slow unneeded
+	seeks.,
+
 2022-05-05  Jose E. Marchesi  <jemarch@gnu.org>
 
 	* libpoke/pkl-gen.pks (struct_mapper): Add an explicative message
